# xoe

./: .gitignore  404.html  README.md  docs_instruction.md  goal.md  hashmap.json  index.html  main.py  pyproject.toml
api/: nn.html  optim.html  random.html  tensor.html
assets/: api_nn.md.DntVuvmS.js  api_nn.md.DntVuvmS.lean.js  api_nn.md.RanhVx72.js  api_nn.md.RanhVx72.lean.js  api_optim.md.Bc5nMZsQ.js  api_optim.md.Bc5nMZsQ.lean.js  api_optim.md.HNKuHl5X.js  api_optim.md.HNKuHl5X.lean.js  api_random.md.Csm_yQEe.js  api_random.md.Csm_yQEe.lean.js  api_random.md.hmd9D5vW.js  api_random.md.hmd9D5vW.lean.js  api_tensor.md.CN7Jw784.js  api_tensor.md.CN7Jw784.lean.js  api_tensor.md.CVzoI60u.js  api_tensor.md.CVzoI60u.lean.js  app.Bkmdh8tb.js  app.CpvFoPoV.js  guide_autograd.md.BNZ-mcvG.js  guide_autograd.md.BNZ-mcvG.lean.js  guide_autograd.md.rt20C1eH.js  guide_autograd.md.rt20C1eH.lean.js  guide_getting-started.md.BistxOML.js  guide_getting-started.md.BistxOML.lean.js  guide_getting-started.md.Grf3awVm.js  guide_getting-started.md.Grf3awVm.lean.js  guide_tensors.md.Cf2gZssR.js  guide_tensors.md.Cf2gZssR.lean.js  guide_tensors.md.Jb3b4Gw4.js  guide_tensors.md.Jb3b4Gw4.lean.js  guide_training-loop.md.BLLrBM-9.js  guide_training-loop.md.BLLrBM-9.lean.js  guide_training-loop.md.BUHVmAAZ.js  guide_training-loop.md.BUHVmAAZ.lean.js  index.md.BCoIo9p6.lean.js  index.md.CJtqsB_s.lean.js  style.C-ib402C.css  style.DXB1FXK6.css
docs/: index.md  package-lock.json  package.json
guide/: autograd.html  getting-started.html  tensors.html  training-loop.html
tests/: test_xoe.py
(+40 files in other folders)
